[project]
name = "rpc-municipal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "duckdb>=1.5.2",
    "folium>=0.20.0",
    "marimo>=0.23.3",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
]
[tool.marimo.runtime]
output_max_bytes = 50_000_000  # Aumenta para 50MB
