[project]
name = "rpc-municipal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "branca",
    "duckdb",
    "folium",
    "marimo",
    "pandas",
    "plotly",
    "pyarrow",
]
[tool.marimo.runtime]
output_max_bytes = 50_000_000  # Aumenta para 50MB
